--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,13 @@
-.logo {
-    width: 8%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300&family=Roboto&display=swap');
 
-.cards img {
-    height: 100px;
-}
-
+/* Header blue space css */
 /* margin: 0; makes the background color fully covers, without having white spaces around */
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -23,7 +19,7 @@ header {
 
 .logo {
     padding-left: 10%;
-    height: 40px;
+    height: 60px;
     width: auto;
 }
 
@@ -35,6 +31,7 @@ header ul {
 
 header ul li {
     padding: 0 8px;
+    flex-shrink: 0;
 }
 
 header ul li a, .intro .texts #des {
@@ -54,9 +51,9 @@ header ul li a:hover {
 
 .intro {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    /* gap: 20px; */
+    gap: 40px;
 }
 
 .intro .texts {
@@ -78,6 +75,7 @@ header ul li a:hover {
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 60px;
+    flex-shrink: 0;
 }
 
 .intro .texts #head {
@@ -89,7 +87,7 @@ header ul li a:hover {
 .intro .texts button {
     margin-top: 10px;
     padding: 5px 20px;
-    border-radius: 8px;
+    border-radius: 10px;
     border: none;
     background-color: #3882F6;
     color: #F9FAF8;
@@ -99,4 +97,63 @@ header ul li a:hover {
     background-color: #F9FAF8;
     color: #3882F6;
     cursor: pointer;
+}
+
+
+/* _____________________________________________________ */
+/* Random info CSS */
+.random_info {
+    padding-top: 40px;
+    padding-bottom: 120px;
+}
+.random_info .random_facts {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.random_info .cards {
+    display: flex;
+    justify-content: center;
+    /* flex-direction: column; */
+    gap: 35px;
+    padding-top: 10px;
+}
+
+/* don't include justify content to keep img align with text w/o looking shifted */
+.random_info .cards .card {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;  */
+    align-items: center;
+}
+
+.random_info .cards img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: auto;
+    border-radius: 10px;
+    border-color: #3882F6;
+}
+
+/* Make img hover special effect */
+.random_info .cards img:hover {
+    cursor: pointer;
+    opacity: 30%;
+}
+
+.random_info .cards .card .text {
+    text-align: center;
+    font-size: 10px;
+    width: 100px;
+    font-size: 13px;
+    color: gray;
+    padding-top: 8px;
 }
