--- a/styles.css
+++ b/styles.css
@@ -230,3 +230,14 @@ header ul li a:hover {
     background-color: #F9FAF8;
     color: #3882F6;
 }
+
+/* Footer CSS */
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+}
